# course-project

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  ACTrie.cpp  ACTrie.hpp  App.cpp  App.hpp  CMakeLists.txt  Drawer.cpp  Drawer.hpp  GLFWwindowManager.hpp  ImGuiExtensions.hpp  Observable.cpp  Observable.hpp  Observer.hpp  README.md  React.hpp  SendTypeHelper.hpp  app_config.hpp  build.sh  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  build_unix_debug.bat  build_unix_make_debug.bat  build_unix_make_release.bat  build_vs15_debug.bat  build_vs16.bat  build_vs16_clang.bat  build_vs17.bat  build_vs17_clang.bat  build_vs17_debug.bat  glad_fix.hpp  main.cpp  run_clang_format.bat  run_clang_format.sh  run_clang_tidy.bat  run_clang_tidy.sh
App/: ACTrie.cpp  ACTrie.hpp  ACTrieController.cpp  ACTrieController.hpp  App.cpp  App.hpp  Drawer.cpp  Drawer.hpp  Observer.hpp  React.cpp  React.hpp
GraphicFacades/: GLFWFacade.cpp  GLFWFacade.hpp  GladFix.hpp  ImGuiFacade.cpp  ImGuiFacade.hpp
GraphicsUtils/: Drawer.cpp  Drawer.hpp  DrawerShowSpeedManager.hpp  GLFWFacade.cpp  GLFWFacade.hpp  GladFix.hpp  ImGuiExtensions.hpp  ImGuiFacade.cpp  ImGuiFacade.hpp  Palette.hpp
GraphicsUtils/DrawerUtils/: Logger.cpp  Logger.hpp  StaticLogger.hpp  StringHistoryManager.cpp  StringHistoryManager.hpp
Test/: Timer.hpp  tests.cpp
Tests/: CMakeLists.txt  Timer.hpp  main.cpp  run_tests.bat  run_tests.sh  tests.cpp  tests.hpp
